# python-search-api

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_new.py
.github/workflows/: ci-cd.yml  ci.yml  cleanup.yml  code-quality.yml  dependency-updates.yml  nightly.yml  performance.yml  release.yml  test.yml  tests.yml  unit-tests.yml
scripts/: dev.sh  quick_test.sh  setup.sh  start.sh  test.sh
src/: app.py
src/api/: search.py
src/core/: config.py  logging.py
src/models/: requests.py  responses.py
src/services/: auth_service.py  ddgs_service.py
tests/: conftest.py  locustfile.py  test_api.py  test_integration.py  test_models.py  test_services.py
